<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_auth_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/auth_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/auth_form_bg"
            android:padding="@dimen/auth_form_padding">

            <EditText
                style="@style/AuthEditText"
                android:id="@+id/fragment_auth_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_login"/>

            <EditText
                style="@style/AuthEditText"
                android:id="@+id/fragment_auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/auth_password"/>
        </LinearLayout>

        <Button
            android:id="@+id/fragment_auth_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_button_height"
            android:layout_marginTop="@dimen/auth_button_offset"
            android:background="@drawable/auth_button_bg"
            android:textColor="@drawable/auth_button_text"
            android:textSize="@dimen/auth_text_size"
            android:text="@string/auth_button"/>
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#000"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/fragment_auth_form"/>
</RelativeLayout>